# ai4fairedu

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  readme.md
frontend/: README.md  app.py  test_learning_view_translations.py  test_translation.py  translations.py
frontend/static/css/: about.css  dashboard.css  index.css  learning_view.css  main.css  material_processing.css  material_upload.css  materials_history.css  questionnaire.css
frontend/static/js/: learning_view.js  main.js
frontend/templates/: about.html  base.html  dashboard.html  index.html  learning_view.html  material_processing.html  material_upload.html  materials_history.html  questionnaire.html
results/: adhd_highlighted_unit_1.html  direct_highlighted_content.html  highlighting_demo_adhd_20250307135017.json
src/: adhd_support.py  architecture.py  config.py  content_generator.py  dashboard_analyzer.py  dyslexia_support.py  evaluation.py  highlighting_demo.py  main.py  run_analysis.py  run_analysis.py.save  run_material_test.py  test_dashboard_analyzer.py  test_material_processing.py  user_profile.py
src/prompts/: base.py  intervention_effectiveness.py  micro_content_divider.py  profile_analyzer.py  profile_analyzer_en.py  prompt_manager.py  syntax_simplifier.py
src/utils/: content_analyzer.py  llm_utils.py  text_highlighter.py
