[tool.poetry]
name = "ai4fairedu"
version = "0.1.0"
description = ""
authors = ["Jiaqi <jiaqishao7570@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
langchain-openai = "^0.3.7"
langchain-community = "^0.3.19"
langchain = "^0.3.20"
openai = "^1.65.3"
langgraph = "^0.3.5"
langmem = "^0.0.15"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
